Completed Desktop Design

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -16,10 +17,41 @@
 
 <body>
 
-  
-     
+	<section class="container navigation">
+		
+		<h1><a href="#">Fun Bus</a></h1>
+
+		<nav>
+			<a href="#">Home</a>
+			<a href="#">About Us</a>
+			<a href="#">Blog</a>
+			<a href="#">Contract</a>
+		</nav>
+
+	</section>
+
+	<hr>
+	
   <div class="container home">
-   
+
+		<section class="funbus-section">
+
+			<div class="image-container">
+				<img src="./img/fun-bus.jpg" alt=" Small Tow bus in the sand on a beach">
+			</div>
+
+			<div class="funbus-text-container">
+				<h2>Welcome To Fun Bus!</h2>
+				<p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wnderlust theme blogger webseit expediton there travelblogger. <br>
+				Adventure fun traveler pretty design webdite expedition.
+				</p>
+
+			</div>
+
+		</section>
+		 
+		<hr>
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
